user interatction input

--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
    </head>
    <body>
       <h1>Notes app</h1>
-      <div id="main-container">
 
+      <input type="text" id="add-note-input"> </input>
+      <button id="add-note-btn">Add Note</button>
+
+      <div id="main-container">
+         
       </div>
+      
       <script type="text/javascript" src="bundle.js"></script>
    </body>
 </html>
